@@ -1,3 +1,15 @@
-SUBARCH_SUPPORTED = powerpc power3 power4 demo # apus powerpc-small
+SUBARCH_SUPPORTED = powerpc power3 power4 demo powerpc-small # apus
 
 EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
+
+arch_boot:
+	if [ ! -d $(TEMP_POWERPC_INITRD) ]; then	 \
+		mkdir $(TEMP_POWERPC_INITRD);		\
+	fi
+	powerpc-builtin-initrd.sh	\
+		$(TEMP_KERNEL)		\
+		$(TEMP)/System.map	\
+		$(TEMP_INITRD)		\
+		$(TEMP_POWERPC_INITRD)	\
+		$(DEST)			\
+		$(KERNELIMAGEVERSION)
