@@ -5,21 +5,6 @@ KERNEL_FLAVOUR = di
 KERNELNAME = vmlinux
 KERNELIMAGEVERSION = $(KERNELVERSION)
 
-arch_boot:
-	mkdir -p $(shell dirname $(TEMP_BOOT))
-	dd if=/dev/zero of=$(TEMP_BOOT).new bs=1024 count=$(FLOPPY_SIZE)
-	hformat -l $(DISK_LABEL) $(TEMP_BOOT).new
-	gzip -vc9 $(TEMP_KERNEL) > $(TEMP_KERNEL).gz
-	echo device $(TEMP_BOOT).new > $(TEMP)/miboot.conf
-	echo kernel $(TEMP_KERNEL).gz $(KERNEL_CMDL) >> $(TEMP)/miboot.conf
-	miboot -c $(TEMP)/miboot.conf
-	mv $(TEMP_BOOT).new $(TEMP_BOOT)
-
-arch_root:
-	cp $(TEMP_INITRD) $(TEMP_ROOT)
-
-arch_boot_screens:
-
 # cd content for powerpc, includes yaboot for booting 
 # apple powerpc (newworld) computers
 cd_content: initrd
