@@ -1,7 +1,7 @@
 MEDIA_TYPE = CD-ROM
 
 # cd booting does not need floppy images on powerpc
-TARGET = $(INITRD) $(KERNEL)
+TARGET = $(INITRD) $(KERNEL) $(TEMP_BOOT)
 EXTRANAME = $(MEDIUM)/
 
 # FIXME: Temporary fix, these files should be in a udeb!
