@@ -29,3 +29,4 @@ cd_image: cd_content
 	mkisofs -r -T --netatalk -hfs -probe -map boot/powerpc/hfs.map -part -no-desktop -hfs-bless $(CD_IMAGE_TREE)/install/powermac -hfs-volid Debian-Installer/PPC -o $(DEST)/$(TYPE).iso $(CD_IMAGE_TREE)
 
 arch_boot_screens:
+
